--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <HTML>
 <body>
-<h1>Hello World</h1>
+<h1>
+  <center>Hello World</center>
+  background-color:rgb(255,0,0)
+</h1>
 <p>Hows it going</p>
 <p>I'm hosted with GitHub.</p>
 </body>
