--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>
   <center>Hello World</center>
-  background-color:rgb(255,0,0)
+  bgcolor="Red"
 </h1>
 <p>Hows it going</p>
 <p>I'm hosted with GitHub.</p>
