--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <HTML>
-<body>
-<h1 bgcolor="Silver">
-  <center>Hello World</center>
+<body bgcolor="Silver">
+<h1>
+  <center>Aidan's Site</center>
 
 </h1>
-<p>Hows it going</p>
-<p>I'm hosted with GitHub.</p>
+<p>Hello World</p>
 </body>
 </html>
