--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </h1>
 <h2>Favorites Links</h2>
 <p>
-<a href="http://google.com" Google </a>
-<a href="http://youtube.com"Youtube</a>
+<a href="http://google.com"> Google </a>
+<a href="http://youtube.com">Youtube</a>
 </p>
 </body>
 </html>
