--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <HTML>
-<body bgcolor="Silver">
+<body background="ionspeeder.png">
 <h1>
   <center>Aidan's Site</center>
 
@@ -8,7 +8,15 @@
 <h2>Favorites Links</h2>
 <p>
 <a href="http://google.com"> Google </a>
-<a href="http://youtube.com">Youtube</a>
+</p>
+<p>
+  <a href="http://youtube.com">Youtube</a>
+</p>
+<p>
+  <a href="http://inventioneering.net/">Inventioneering</a>
+</p>
+<p>
+  <a href="https://slack.com/">Slack</a>
 </p>
 </body>
 </html>
