--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <HTML>
-<body background="ionspeeder.png" >
+<body background-image:url(ionspeeder.png);>
 
-<h1>
+<h1 background="blue">
   <center>Aidan's Site</center>
 
 </h1>
