--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <HTML>
-<body background-image:url(ionspeeder.png);>
+<body background="blue">
 
-<h1 background="blue">
+<h1>
   <center>Aidan's Site</center>
 
 </h1>
