--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <HTML>
-<body bgcolor="50,10,150">
+<body bgcolor="255,69,0">
 
 <h1>
   <center>Aidan's Site</center>
 
 </h1>
-<h2>Favorites Links</h2>
+<h2>Favorite Links</h2>
 <p>
 <a href="http://google.com"> Google </a>
 </p>
