--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <HTML>
-<body bgcolor="navy">
+<body>
+  <style>
+  body{background-color:red}
+  h1{color:lightgrey}
+  p{color:lightgrey}
+  </style>
+
 
 <h1>
   <center>Aidan's Site</center>
