--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <HTML>
 <body>
   <style>
-  body{background-color:red}
+  body{background-color:orange}
   h1{color:lightgrey}
+  h2{color:lightgrey}
   p{color:lightgrey}
   </style>
 
@@ -12,7 +13,12 @@
   <center>Aidan's Site</center>
 
 </h1>
-<h2>Favorite Links</h2>
+<h2>
+  <style>
+  border:1px;
+  padding:10px;
+  </style>
+  Favorite Links</h2>
 <p>
 <a href="http://google.com"> Google </a>
 </p>
