--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <style>
   body{background-color:orange}
   h1{color:lightgrey}
+  h1{
+    border-style: full;
+    border-width: 10px;
+  }
   h2{color:lightgrey}
   p{color:lightgrey}
   </style>
@@ -14,11 +18,8 @@
 
 </h1>
 <h2>
-  <style>
-  border:1px;
-  padding:10px;
-  </style>
-  Favorite Links</h2>
+  Favorite Links
+</h2>
 <p>
 <a href="http://google.com"> Google </a>
 </p>
