--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <body>
   <style>
   body{background-color:orange}
-  h1{color:lightgrey}
-  h1{
-    border-style: full;
-    border-width: 10px;
-    border-color: grey;
-  }
+  h1{color:lightgrey;
+  border-style:solid;
+  border-width:medium;}
   h2{color:lightgrey}
   p{color:lightgrey}
   </style>
