--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <HTML>
 <body>
   <style>
-  body{background-color:orange}
+  body{background: url(datsun-240z-slammed-red.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;}
   h1{color:lightgrey;
   border-style:solid;
   border-width:medium;}
