--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <HTML>
 <body>
   <style>
-  body{background: url(datsun-240z-slammed-red.jpg);
-  background-repeat: no-repeat;
-  background-size: 100%;}
+  body{background: orange;}
   h1{color:lightgrey;
   border-style:solid;
   border-width:medium;}
