--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
 <p>
   <a href="https://slack.com/">Slack</a>
 </p>
+<p
+><a href="https://github.com/AidanMaddox">GitHub</a>
+</p>
 </body>
 </html>
