--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <body>
   <style>
   body{background: orange;}
-  h1{color:lightgrey;
+  h1{color:black;
   border-style:solid;
-  border-width:medium;}
+  border-width:medium;
+  background:grey;
+  }
   h2{color:lightgrey}
   p{color:lightgrey}
   </style>
