--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   border-width:medium;
   background:grey;
   }
-  h2{color:lightgrey}
+  h2{color:black
+    border-style:solid;
+    border-width:medium;
+    background:grey;
+  }
   p{color:lightgrey}
   </style>
 
