--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   }
   h2{color:black
     border-style:solid;
-    border-width:medium;
+    border-width:10px;
     background:grey;
   }
   p{color:lightgrey}
