--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <HTML>
+  <head>
+    <title>
+    </title>
+    <style>
+    body{background: orange;}
+    h1{color:black;
+    border-style:solid;
+    border-width:medium;
+    background:grey;
+    }
+    h2{color:black
+    }
+    p{color:lightgrey}
+    </style>
+  </head>
 <body>
-  <style>
-  body{background: orange;}
-  h1{color:black;
-  border-style:solid;
-  border-width:medium;
-  background:grey;
-  }
-  h2{color:black
-  }
-  p{color:lightgrey}
-  </style>
+
 
 
 <h1>
@@ -19,7 +24,7 @@
 
 </h1>
 <h2>
-  Favorite Links and stuff
+  Favorite Links
 </h2>
 <p>
 <a href="http://google.com"> Google </a>
