--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     background:grey;
     }
     h2{color:black
+      border-style:solid;
+      border-width:medium;
+      background:grey;
     }
     p{color:lightgrey}
     </style>
