--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     h2{color:black
       border-style:solid;
       border-width:medium;
+      border-length:200;
       background:grey;
     }
     p{color:lightgrey}
