--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <HTML>
   <head>
     <title>
+      Aidan's Site
     </title>
     <style>
     body{background: orange;}
@@ -10,13 +11,13 @@
     border-width:medium;
     background:grey;
     }
-    h2{color:black
+    h2{color:black;
+    }
+    p{color:lightgrey;
       border-style:solid;
       border-width:medium;
-      border-length:200;
       background:grey;
     }
-    p{color:lightgrey}
     </style>
   </head>
 <body>
@@ -31,6 +32,7 @@
   Favorite Links
 </h2>
 <p>
+<p>
 <a href="http://google.com"> Google </a>
 </p>
 <p>
@@ -44,6 +46,7 @@
 </p>
 <p
 ><a href="https://github.com/AidanMaddox">GitHub</a>
+</p>
 </p>
 </body>
 </html>
