--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     h2{color:black;
     }
     p{color:lightgrey;
-      border-style:solid;
-      border-width:medium;
-      background:grey;
     }
     </style>
   </head>
@@ -31,7 +28,7 @@
 <h2>
   Favorite Links
 </h2>
-<p>
+<div style="background-color:grey; color:black; margin:20px; padding:20px;">
 <p>
 <a href="http://google.com"> Google </a>
 </p>
@@ -47,6 +44,6 @@
 <p
 ><a href="https://github.com/AidanMaddox">GitHub</a>
 </p>
-</p>
+</div>
 </body>
 </html>
