--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 </h1>
 <h2>
+  <div style:header>
   Favorite Links
+</div>
 </h2>
 <div style="background-color:grey; color:black; margin:20px; padding:20px;">
 <p>
