--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
 </h1>
 <h2>
-  <div id="header">
+  <center>
   Favorite Links
-</div>
+</center>
 </h2>
-<div style="background-color:grey; color:black; margin:20px; padding:20px;">
+<div style="background-color:grey; color:black; margin:20px; padding:40px;">
 <p>
 <a href="http://google.com"> Google </a>
 </p>
