--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 </center>
 </h2>
 <div style="background-color:grey; color:black; margin:20px; padding:40px;">
-<p>
-<a href="http://google.com"> Google </a>
+<p style="font-size:100%">
+<a href="http://google.com">  Google </a>
 </p>
-<p>
+<p style="font-size:100%">
   <a href="http://youtube.com">Youtube</a>
 </p>
-<p>
+<p style="font-size:100%">
   <a href="http://inventioneering.net/">Inventioneering</a>
 </p>
-<p>
+<p style="font-size:100%" >
   <a href="https://slack.com/">Slack</a>
 </p>
-<p
-><a href="https://github.com/AidanMaddox">GitHub</a>
+<p style="font-size:100%">
+<a href="https://github.com/AidanMaddox">GitHub</a>
 </p>
 </div>
 </body>
